# ogldev

./: .gitignore  CMakeLists.txt
Resources/shaders/: lighting_new.fs  lighting_new.vs  lighting_new_to_gs.vs  passthru.gs  wireframe_on_mesh.gs
include/glad/: glad.h
include/ogldev/: AABB.h  Matrix3f.h  Matrix4f.h  Quaternion.h  Vector3f.h  Vector4f.h  basic_mesh.cpp  basic_mesh.h  camera.h  engine_common.h  frustum.h  glfw_window.h  lighting2.cpp  lighting2.h  mat3f.h  mat4f.h  material.h  math3d.cpp  math3d.h  mesh_common.h  picking.fs  quat.h  technique.cpp  technique.h  texture.h  types.h  utility.cpp  utility.h  vec2f.h  vec2i.h  vec3i.h  vec4f.h  world_transform.h
src/: CMakeLists.txt  glad.c
src/2.intermediate_opengl/31.selecting3d/: application.cpp  application.h  main.cpp  picking.vs  picking_technique.cpp  picking_technique.h  picking_texture.cpp  picking_texture.h  render_callbacks.h  simple_color_technique.cpp  simple_color_technique.h
